<?xml version="1.0" encoding="utf-8"?>
<!--Created By Mahmoud El Shenawy (Email : Mr.Mahmoud.El.Shenawy@Gmail.com)-->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarArtist"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingArtist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/imageViewCollapsingArtist"
                    style="@style/Theme.MusicApp.ImageView.Collapsing"
                    app:layout_collapseMode="parallax"
                    android:src="@drawable/large_logo"
                    android:contentDescription="@string/background" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circularImageViewArtist"
                    style="@style/Theme.MusicApp.CircularImageView"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="2dp"/>

                <TextView
                    android:id="@+id/textViewTitleArtist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="85dp"
                    android:gravity="center"
                    android:text="@string/artist"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/textViewFollowersArtist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="110dp"
                    android:gravity="center"
                    android:text="@string/hint_followers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle.Inverse"
                    android:textColor="@color/white"/>
            </FrameLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                app:layout_collapseMode="pin"
                app:layout_anchor="@id/appBarArtist"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:minHeight="?android:attr/actionBarSize"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTitleTracks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_10_tracks"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textViewSubtitleArtist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                    android:textColor="@color/white"
                    android:visibility="visible"/>
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewTracks"
            style="@style/Theme.MusicApp.RecyclerView"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <ProgressBar
            android:id="@+id/progressBarTracks"
            style="@style/Theme.MusicApp.ProgressBar"
            android:layout_marginTop="@dimen/space_default" />

        <ImageView
            android:id="@+id/imageViewTracks"
            style="@style/Theme.MusicApp.ImageView"/>

        <TextView
            android:id="@+id/textViewLineTracks"
            style="@style/Theme.MusicApp.TextView"
            android:text="@string/find_your_favorite_music"
            android:textSize="@dimen/size_title"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>